# COMPENG4DK4

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Lab 1/code/: coe4dk4_lab_1_2022.c  coe4dk4_lab_1_2022_exp2.c  coe4dk4_lab_1_2022_exp3.c  coe4dk4_lab_1_2022_exp4.c  coe4dk4_lab_1_2022_exp6.c  coe4dk4_lab_1_2022_exp7.c  coe4dk4_lab_1_2022_exp8.c
Lab 2/code/: cleanup_memory.c  cleanup_memory.h  main.c  main.h  output.c  output.h  packet_arrival.c  packet_arrival.h  packet_transmission.c  packet_transmission.h  simlib.c  simlib.h  simparameters.h
Lab 2/report/: placeholder.tex  report.tex
Lab 3/MATLAB/: exp2.m  exp3.m  exp5.m
Lab 3/code/: CMakeLists.txt  call_arrival.c  call_arrival.h  call_departure.c  call_departure.h  call_duration.c  call_duration.h  cleanup.c  cleanup.h  output.c  output.h  run  simlib.c  simparameters.h
Lab 3/coe4dk4_lab_3_2022/: CMakeLists.txt  call_arrival.h  call_departure.c  call_duration.h  cleanup.c  cleanup.h  main.c  main.h
Lab 3/coe4dk4_lab_3_2022/__MACOSX/: ._coe4dk4_lab_3_2022
Lab 3/coe4dk4_lab_3_2022/__MACOSX/coe4dk4_lab_3_2022/: ._call_arrival.c  ._cleanup.c
Lab 3/coe4dk4_lab_3_2022/coe4dk4_lab_3_2022/: call_duration.c  output.h  simparameters.h
Lab 3/report/: report.tex
Lab 4/code/: CMakeLists.txt  main.c  packet_duration.c
Lab 4/coe4dk4_lab_4_2022/: packet_transmission.c  simparameters.h
Lab 4/report/: report.tex
Lab 5/code/: channel.h  cleanup.c  main.c  main.h  output.c  packet_arrival.c  packet_arrival.h  packet_duration.c  packet_duration.h  packet_transmission.c  packet_transmission.h  (+2 more)
(+119 files in other folders)
